@@ -1,3 +1,15 @@
+import io.github.fvarrui.javapackager.gradle.PackageTask
+
+buildscript {
+    repositories {
+        mavenCentral()
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath('io.github.fvarrui:javapackager:1.7.6')
+    }
+}
+
 plugins {
     id 'java'
     id 'application'
@@ -5,10 +17,12 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '3.0.0'
     id 'org.jetbrains.kotlin.jvm'
+    id 'io.github.fvarrui.javapackager.plugin' version '1.7.6'
 }
 
+
 group 'com.sunkenpotato'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -27,15 +41,18 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+mainClassName = 'com.sunkenpotato.client2p.MainApplication'
+
 application {
     mainModule = 'com.sunkenpotato.client2p'
-    mainClass = 'com.sunkenpotato.client2p.MainApplication'
+    mainClass = mainClassName
 }
 
 javafx {
     version = '21'
     modules = ['javafx.controls', 'javafx.fxml']
 }
+
 
 dependencies {
     implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
@@ -59,7 +76,8 @@ test {
 
 jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--module-path', '/Users/piro/Downloads/javafx-sdk-21.0.4/lib',
+        '--add-modules']
     launcher {
         name = 'app'
     }
@@ -72,3 +90,12 @@ jlinkZip {
 kotlin {
     jvmToolchain(21)
 }
+
+tasks.register('packageMyApp', PackageTask) {
+    dependsOn build
+    mainClass = mainClassName
+    bundleJre = true
+    customizedJre = true
+    modules = ['javafx.controls', 'javafx.fxml']
+}
+
